--- a/chinook/Music Database Queries.ipynb
+++ b/chinook/Music Database Queries.ipynb
@@ -1,6 +1,425 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "conn = sqlite3.connect('chinook.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>track_type</th>\n",
+       "      <th>unit_price</th>\n",
+       "      <th>quantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3448</td>\n",
+       "      <td>Lamentations of Jeremiah, First Set \\ Incipit ...</td>\n",
+       "      <td>The King's Singers</td>\n",
+       "      <td>Protected AAC audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2560</td>\n",
+       "      <td>Violent Pornography</td>\n",
+       "      <td>System Of A Down</td>\n",
+       "      <td>MPEG audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3336</td>\n",
+       "      <td>War Pigs</td>\n",
+       "      <td>Cake</td>\n",
+       "      <td>Purchased AAC audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>829</td>\n",
+       "      <td>Let's Get Rocked</td>\n",
+       "      <td>Def Leppard</td>\n",
+       "      <td>MPEG audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1872</td>\n",
+       "      <td>Attitude</td>\n",
+       "      <td>Metallica</td>\n",
+       "      <td>MPEG audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>748</td>\n",
+       "      <td>Dealer</td>\n",
+       "      <td>Deep Purple</td>\n",
+       "      <td>MPEG audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1778</td>\n",
+       "      <td>You're What's Happening (In The World Today)</td>\n",
+       "      <td>Marvin Gaye</td>\n",
+       "      <td>MPEG audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2514</td>\n",
+       "      <td>Spoonman</td>\n",
+       "      <td>Soundgarden</td>\n",
+       "      <td>MPEG audio file</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   track_id                                         track_name  \\\n",
+       "0      3448  Lamentations of Jeremiah, First Set \\ Incipit ...   \n",
+       "1      2560                                Violent Pornography   \n",
+       "2      3336                                           War Pigs   \n",
+       "3       829                                   Let's Get Rocked   \n",
+       "4      1872                                           Attitude   \n",
+       "5       748                                             Dealer   \n",
+       "6      1778       You're What's Happening (In The World Today)   \n",
+       "7      2514                                           Spoonman   \n",
+       "\n",
+       "          artist_name                track_type  unit_price  quantity  \n",
+       "0  The King's Singers  Protected AAC audio file        0.99         1  \n",
+       "1    System Of A Down           MPEG audio file        0.99         1  \n",
+       "2                Cake  Purchased AAC audio file        0.99         1  \n",
+       "3         Def Leppard           MPEG audio file        0.99         1  \n",
+       "4           Metallica           MPEG audio file        0.99         1  \n",
+       "5         Deep Purple           MPEG audio file        0.99         1  \n",
+       "6         Marvin Gaye           MPEG audio file        0.99         1  \n",
+       "7         Soundgarden           MPEG audio file        0.99         1  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = '''\n",
+    "SELECT track.track_id, track.name track_name, artist.name artist_name, med.name track_type, inv.unit_price unit_price, inv.quantity\n",
+    "FROM invoice_line inv\n",
+    "INNER JOIN track ON track.track_id = inv.track_id\n",
+    "INNER JOIN media_type med ON track.media_type_id = med.media_type_id\n",
+    "INNER JOIN album ON album.album_id = track.album_id\n",
+    "INNER JOIN artist ON artist.artist_id = album.artist_id\n",
+    "WHERE inv.invoice_id = 4\n",
+    ";'''\n",
+    "\n",
+    "pd.read_sql_query(q, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>album</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>tracks_purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Are You Experienced?</td>\n",
+       "      <td>Jimi Hendrix</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Faceless</td>\n",
+       "      <td>Godsmack</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mezmerize</td>\n",
+       "      <td>System Of A Down</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Get Born</td>\n",
+       "      <td>JET</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Doors</td>\n",
+       "      <td>The Doors</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  album            artist  tracks_purchased\n",
+       "0  Are You Experienced?      Jimi Hendrix               187\n",
+       "1              Faceless          Godsmack                96\n",
+       "2             Mezmerize  System Of A Down                93\n",
+       "3              Get Born               JET                90\n",
+       "4             The Doors         The Doors                83"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = '''\n",
+    "SELECT sub.al_name album, sub.ar_name artist, SUM(il.quantity) tracks_purchased\n",
+    "FROM invoice_line il\n",
+    "INNER JOIN (SELECT t.track_id, ar.name ar_name, al.title al_name\n",
+    "            FROM track t\n",
+    "            INNER JOIN album al ON al.album_id = t.album_id\n",
+    "            INNER JOIN artist ar ON al.artist_id = ar.artist_id) as sub\n",
+    "            ON sub.track_id = il.track_id\n",
+    "GROUP BY album\n",
+    "ORDER BY tracks_purchased DESC\n",
+    "LIMIT 5\n",
+    ";'''\n",
+    "\n",
+    "pd.read_sql_query(q, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee_name</th>\n",
+       "      <th>employee_title</th>\n",
+       "      <th>supervisor_name</th>\n",
+       "      <th>supervisor_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Andrew Adams</td>\n",
+       "      <td>General Manager</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jane Peacock</td>\n",
+       "      <td>Sales Support Agent</td>\n",
+       "      <td>Nancy Edwards</td>\n",
+       "      <td>Sales Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Laura Callahan</td>\n",
+       "      <td>IT Staff</td>\n",
+       "      <td>Michael Mitchell</td>\n",
+       "      <td>IT Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Margaret Park</td>\n",
+       "      <td>Sales Support Agent</td>\n",
+       "      <td>Nancy Edwards</td>\n",
+       "      <td>Sales Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Michael Mitchell</td>\n",
+       "      <td>IT Manager</td>\n",
+       "      <td>Andrew Adams</td>\n",
+       "      <td>General Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Nancy Edwards</td>\n",
+       "      <td>Sales Manager</td>\n",
+       "      <td>Andrew Adams</td>\n",
+       "      <td>General Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Robert King</td>\n",
+       "      <td>IT Staff</td>\n",
+       "      <td>Michael Mitchell</td>\n",
+       "      <td>IT Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Steve Johnson</td>\n",
+       "      <td>Sales Support Agent</td>\n",
+       "      <td>Nancy Edwards</td>\n",
+       "      <td>Sales Manager</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      employee_name       employee_title   supervisor_name supervisor_title\n",
+       "0      Andrew Adams      General Manager              None             None\n",
+       "1      Jane Peacock  Sales Support Agent     Nancy Edwards    Sales Manager\n",
+       "2    Laura Callahan             IT Staff  Michael Mitchell       IT Manager\n",
+       "3     Margaret Park  Sales Support Agent     Nancy Edwards    Sales Manager\n",
+       "4  Michael Mitchell           IT Manager      Andrew Adams  General Manager\n",
+       "5     Nancy Edwards        Sales Manager      Andrew Adams  General Manager\n",
+       "6       Robert King             IT Staff  Michael Mitchell       IT Manager\n",
+       "7     Steve Johnson  Sales Support Agent     Nancy Edwards    Sales Manager"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = '''\n",
+    "SELECT \n",
+    "e1.first_name || \" \" || e1.last_name employee_name,\n",
+    "e1.title employee_title,\n",
+    "e2.first_name || \" \" || e2.last_name supervisor_name,\n",
+    "e2.title supervisor_title\n",
+    "FROM employee e1\n",
+    "LEFT JOIN employee e2 \n",
+    "ON e1.reports_to = e2.employee_id\n",
+    "ORDER BY employee_name\n",
+    ";'''\n",
+    "\n",
+    "pd.read_sql_query(q, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
