--- a/alcohol/AlcoholConsumption.ipynb
+++ b/alcohol/AlcoholConsumption.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploration of Alcohol Consumption Worldwide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using numpy and lists to explore alcohol consumption over the world, with the purpose of understanding of the necessities that brought about Pandas usage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +48,7 @@
        "       ['1986', 'Africa', 'Swaziland', 'Other', '5.15']], dtype='<U75')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +69,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['1984' 'Africa' 'Algeria' 'Spirits' '0.01']\n",
+      " ['1987' 'Africa' 'Algeria' 'Beer' '0.17']\n",
+      " ['1987' 'Africa' 'Algeria' 'Spirits' '0.01']\n",
+      " ['1986' 'Africa' 'Algeria' 'Wine' '0.1']\n",
+      " ['1984' 'Africa' 'Algeria' 'Other' '0']\n",
+      " ['1989' 'Africa' 'Algeria' 'Beer' '0.16']\n",
+      " ['1989' 'Africa' 'Algeria' 'Spirits' '0.01']\n",
+      " ['1989' 'Africa' 'Algeria' 'Wine' '0.23']\n",
+      " ['1986' 'Africa' 'Algeria' 'Spirits' '0.01']\n",
+      " ['1984' 'Africa' 'Algeria' 'Wine' '0.12']\n",
+      " ['1985' 'Africa' 'Algeria' 'Beer' '0.19']\n",
+      " ['1985' 'Africa' 'Algeria' 'Other' '0']\n",
+      " ['1986' 'Africa' 'Algeria' 'Beer' '0.18']\n",
+      " ['1985' 'Africa' 'Algeria' 'Wine' '0.11']\n",
+      " ['1986' 'Africa' 'Algeria' 'Other' '0']\n",
+      " ['1989' 'Africa' 'Algeria' 'Other' '0']\n",
+      " ['1987' 'Africa' 'Algeria' 'Other' '0']\n",
+      " ['1984' 'Africa' 'Algeria' 'Beer' '0.2']\n",
+      " ['1985' 'Africa' 'Algeria' 'Spirits' '0.01']\n",
+      " ['1987' 'Africa' 'Algeria' 'Wine' '0.1']]\n"
+     ]
+    }
+   ],
    "source": [
     "country_is_algeria = world_alcohol[:,2] == 'Algeria'\n",
     "country_algeria = world_alcohol[country_is_algeria,:]\n",
@@ -66,9 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['1986' 'Africa' 'Algeria' 'Wine' '0.1']\n",
+      " ['1986' 'Africa' 'Algeria' 'Spirits' '0.01']\n",
+      " ['1986' 'Africa' 'Algeria' 'Beer' '0.18']\n",
+      " ['1986' 'Africa' 'Algeria' 'Other' '0']]\n"
+     ]
+    }
+   ],
    "source": [
     "is_algeria_and_1986 = (world_alcohol[:,2] == 'Algeria') & (world_alcohol[:,0] == '1986')\n",
     "rows_with_algeria_and_1986 = world_alcohol[is_algeria_and_1986,:]\n",
@@ -77,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +154,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Which countries drink the most?\n",
+    "\n",
+    "Everyone is curious, and there is always some pride in assuming your country drinks the most. But, who actually does?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +217,13 @@
    "source": [
     "print(highest_key)\n",
     "print(highest_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It turns out that Hungarians drink the most. Or, at least they did in 1989!"
    ]
   },
   {
