Added comments and notes to community/College Notebook

--- a/community/College.ipynb
+++ b/community/College.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparison of Employment Across College Majors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing employment statistics across majors for recent graduates vs. general population. <br>\n",
+    "The first thing that we need to do is import the data, and make sure that the Major Categories are the same in both tables."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +86,7 @@
        " 'Social Science': 2654125}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,8 +104,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check out how many more people are in the *all ages* table vs the *recent grads* table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agriculture & Natural Resources :  556817.0\n",
+      "Biology & Life Science :  884324.0\n",
+      "Engineering :  3038430.0\n",
+      "Humanities & Liberal Arts :  3024867.0\n",
+      "Communications & Journalism :  1411221.0\n",
+      "Computers & Mathematics :  1482370.0\n",
+      "Industrial Arts & Consumer Services :  804006.0\n",
+      "Education :  4140989.0\n",
+      "Law & Public Policy :  723819.0\n",
+      "Interdisciplinary :  32903.0\n",
+      "Health :  2487629.0\n",
+      "Social Science :  2124159.0\n",
+      "Physical Sciences :  839839.0\n",
+      "Psychology & Social Work :  1506271.0\n",
+      "Arts :  1448735.0\n",
+      "Business :  8556365.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cat in cats:\n",
+    "    print(cat,': ',aa_cat_counts[cat]-rg_cat_counts[cat])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +154,7 @@
        "0.09858891195563152"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,8 +165,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison of Unemployment Rates for Recent Grads vs General Population"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -125,12 +187,15 @@
    "source": [
     "majors = recent_grads['Major'].unique()\n",
     "\n",
+    "lower = []\n",
+    "\n",
     "rg_lower_count = 0\n",
     "for major in majors:\n",
     "    aa = float(all_ages[all_ages['Major'] == major]['Unemployment_rate'])\n",
     "    rg = float(recent_grads[recent_grads['Major'] == major]['Unemployment_rate'])\n",
     "    if rg < aa:\n",
     "        rg_lower_count += 1\n",
+    "        lower.append(major)\n",
     "        \n",
     "print(rg_lower_count)"
    ]
@@ -139,28 +204,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to compare aa and gg, they must be cast to *float*. Initially, they are series objects, and cannot be directly compared to each other."
+    "**Note to Self:**\n",
+    "In order to compare aa and rg, they must be cast to *float*. Initially, they are series objects, and cannot be directly compared to each other."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following 44 Majors have lower unemployment for recent grads than for general population."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Can only compare identically-labeled Series objects",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-1e2cbe9b77d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrecent_grads\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrecent_grads\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Major'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'MATHEMATICS'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Unemployment_rate'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mall_ages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mall_ages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Major'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'MATHEMATICS'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Unemployment_rate'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/ops.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self, other, axis)\u001b[0m\n\u001b[1;32m    834\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_indexed_same\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    835\u001b[0m                 \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Can only compare identically-labeled Series objects'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 836\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    837\u001b[0m             return self._constructor(na_op(self.values, other.values),\n\u001b[1;32m    838\u001b[0m                                      index=self.index, name=name)\n",
-      "\u001b[0;31mValueError\u001b[0m: Can only compare identically-labeled Series objects"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PETROLEUM ENGINEERING', 'METALLURGICAL ENGINEERING', 'ASTRONOMY AND ASTROPHYSICS', 'ENGINEERING MECHANICS PHYSICS AND SCIENCE', 'INDUSTRIAL AND MANUFACTURING ENGINEERING', 'ARCHITECTURAL ENGINEERING', 'COURT REPORTING', 'MATERIALS ENGINEERING AND MATERIALS SCIENCE', 'MISCELLANEOUS FINE ARTS', 'INDUSTRIAL PRODUCTION TECHNOLOGIES', 'MATHEMATICS', 'PHYSICS', 'ENGINEERING AND INDUSTRIAL MANAGEMENT', 'MATHEMATICS AND COMPUTER SCIENCE', 'GENERAL AGRICULTURE', 'MISCELLANEOUS ENGINEERING TECHNOLOGIES', 'GENETICS', 'UNITED STATES HISTORY', 'PHYSICAL SCIENCES', 'MILITARY TECHNOLOGIES', 'CHEMISTRY', 'ELECTRICAL, MECHANICAL, AND PRECISION TECHNOLOGIES AND PRODUCTION', 'BOTANY', 'HUMAN RESOURCES AND PERSONNEL MANAGEMENT', 'GEOSCIENCES', 'SOCIAL PSYCHOLOGY', 'AREA ETHNIC AND CIVILIZATION STUDIES', 'SPECIAL NEEDS EDUCATION', 'NEUROSCIENCE', 'MULTI/INTERDISCIPLINARY STUDIES', 'ATMOSPHERIC SCIENCES AND METEOROLOGY', 'SOIL SCIENCE', 'MATHEMATICS TEACHER EDUCATION', 'HEALTH AND MEDICAL PREPARATORY PROGRAMS', 'ART AND MUSIC EDUCATION', 'ART HISTORY AND CRITICISM', 'MISCELLANEOUS PSYCHOLOGY', 'HUMAN SERVICES AND COMMUNITY ORGANIZATION', 'HUMANITIES', 'EARLY CHILDHOOD EDUCATION', 'DRAMA AND THEATER ARTS', 'ZOOLOGY', 'EDUCATIONAL PSYCHOLOGY', 'COUNSELING PSYCHOLOGY']\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(lower)"
+   ]
   },
   {
    "cell_type": "code",
