Added a final multi index query

--- a/factbook/SQLiteIndexing.ipynb
+++ b/factbook/SQLiteIndexing.ipynb
@@ -306,6 +306,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0, 0, 'SEARCH TABLE facts USING COVERING INDEX pop_idx (population>?)')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_plan_five = conn.execute('''\n",
+    "EXPLAIN QUERY PLAN \n",
+    "    SELECT population\n",
+    "    FROM facts\n",
+    "    WHERE population > 1000000\n",
+    ";''').fetchall()\n",
+    "\n",
+    "print(query_plan_five)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
