Ran Comparison between mean mileage and price

--- a/ebay/EbayAds.ipynb
+++ b/ebay/EbayAds.ipynb
@@ -696,7 +696,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>2016-04-02 11:37:04</td>\n",
+       "      <td>2016-03-05 16:57:05</td>\n",
        "      <td>Ford_Fiesta</td>\n",
        "      <td>privat</td>\n",
        "      <td>Angebot</td>\n",
@@ -909,7 +909,7 @@
        "               date_crawled         name  seller offer_type  price abtest  \\\n",
        "count                 50000        50000   50000      50000  50000  50000   \n",
        "unique                48213        38754       2          2   2357      2   \n",
-       "top     2016-04-02 11:37:04  Ford_Fiesta  privat    Angebot     $0   test   \n",
+       "top     2016-03-05 16:57:05  Ford_Fiesta  privat    Angebot     $0   test   \n",
        "freq                      3           78   49999      49999   1421  25756   \n",
        "mean                    NaN          NaN     NaN        NaN    NaN    NaN   \n",
        "std                     NaN          NaN     NaN        NaN    NaN    NaN   \n",
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
        "Name: date_crawled, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
        "Name: ad_created, Length: 74, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
        "Name: last_seen, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
        "Name: registration_year, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1855,7 @@
        "0.03676280225754673"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1891,7 @@
        "(37206, 20)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1972,7 @@
        "Name: registration_year, Length: 77, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2039,7 @@
        "Name: brand, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,48 +2069,48 @@
     "\n",
     "for brand in brands:\n",
     "    temp = autos[autos['brand'] == brand]\n",
-    "    mean = temp['price'].mean()\n",
+    "    mean = round(temp['price'].mean(),2)\n",
     "    mean_price_per_brand[brand] = mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'volkswagen': 6645.13260232054,\n",
-       " 'bmw': 9119.20218696398,\n",
-       " 'mercedes_benz': 9302.614402697494,\n",
-       " 'audi': 10322.269347287249,\n",
-       " 'opel': 4219.954737477368,\n",
-       " 'ford': 5331.478021978022,\n",
-       " 'renault': 3590.942321557318,\n",
-       " 'peugeot': 3955.169556840077,\n",
-       " 'fiat': 4008.174744897959,\n",
-       " 'skoda': 6836.696755994359,\n",
-       " 'seat': 5638.640746500778,\n",
-       " 'smart': 3780.4692556634304,\n",
-       " 'toyota': 5573.57169117647,\n",
-       " 'mazda': 5309.526415094339,\n",
-       " 'citroen': 4614.970986460348,\n",
-       " 'nissan': 6428.428007889546,\n",
-       " 'mini': 10715.237037037037,\n",
-       " 'hyundai': 6181.8725,\n",
-       " 'sonstige_autos': 14454.552699228792,\n",
-       " 'volvo': 6151.583832335329,\n",
-       " 'kia': 6810.160839160839,\n",
-       " 'porsche': 46955.15107913669,\n",
-       " 'honda': 5297.282051282052,\n",
-       " 'mitsubishi': 4812.5078125,\n",
-       " 'chevrolet': 7177.414634146341,\n",
-       " 'alfa_romeo': 5255.379310344828,\n",
-       " 'suzuki': 5149.8779342723}"
+       "{'volkswagen': 6645.13,\n",
+       " 'bmw': 9119.2,\n",
+       " 'mercedes_benz': 9302.61,\n",
+       " 'audi': 10322.27,\n",
+       " 'opel': 4219.95,\n",
+       " 'ford': 5331.48,\n",
+       " 'renault': 3590.94,\n",
+       " 'peugeot': 3955.17,\n",
+       " 'fiat': 4008.17,\n",
+       " 'skoda': 6836.7,\n",
+       " 'seat': 5638.64,\n",
+       " 'smart': 3780.47,\n",
+       " 'toyota': 5573.57,\n",
+       " 'mazda': 5309.53,\n",
+       " 'citroen': 4614.97,\n",
+       " 'nissan': 6428.43,\n",
+       " 'mini': 10715.24,\n",
+       " 'hyundai': 6181.87,\n",
+       " 'sonstige_autos': 14454.55,\n",
+       " 'volvo': 6151.58,\n",
+       " 'kia': 6810.16,\n",
+       " 'porsche': 46955.15,\n",
+       " 'honda': 5297.28,\n",
+       " 'mitsubishi': 4812.51,\n",
+       " 'chevrolet': 7177.41,\n",
+       " 'alfa_romeo': 5255.38,\n",
+       " 'suzuki': 5149.88}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2167,13 +2167,339 @@
        " 'renault': 3590.942321557318}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sorted_mean_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_mileage_per_brand = {}\n",
+    "\n",
+    "for brand in brands:\n",
+    "    temp = autos[autos['brand'] == brand]\n",
+    "    mean = round(temp['odometer_km'].mean(),1)\n",
+    "    mean_mileage_per_brand[brand] = mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mileage_series = pd.Series(mean_mileage_per_brand)\n",
+    "price_series = pd.Series(mean_price_per_brand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brands = pd.DataFrame(mileage_series, columns = ['mean_mileage'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brands['mean_price'] = price_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_mileage</th>\n",
+       "      <th>mean_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>volkswagen</th>\n",
+       "      <td>125765.7</td>\n",
+       "      <td>6645.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bmw</th>\n",
+       "      <td>132001.5</td>\n",
+       "      <td>9119.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mercedes_benz</th>\n",
+       "      <td>130062.6</td>\n",
+       "      <td>9302.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>audi</th>\n",
+       "      <td>127491.0</td>\n",
+       "      <td>10322.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>opel</th>\n",
+       "      <td>123952.9</td>\n",
+       "      <td>4219.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford</th>\n",
+       "      <td>119620.0</td>\n",
+       "      <td>5331.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>renault</th>\n",
+       "      <td>121423.9</td>\n",
+       "      <td>3590.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>peugeot</th>\n",
+       "      <td>122341.0</td>\n",
+       "      <td>3955.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fiat</th>\n",
+       "      <td>107901.8</td>\n",
+       "      <td>4008.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>skoda</th>\n",
+       "      <td>110063.5</td>\n",
+       "      <td>6836.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seat</th>\n",
+       "      <td>116104.2</td>\n",
+       "      <td>5638.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smart</th>\n",
+       "      <td>97775.1</td>\n",
+       "      <td>3780.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>toyota</th>\n",
+       "      <td>113740.8</td>\n",
+       "      <td>5573.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mazda</th>\n",
+       "      <td>119981.1</td>\n",
+       "      <td>5309.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>citroen</th>\n",
+       "      <td>114245.6</td>\n",
+       "      <td>4614.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nissan</th>\n",
+       "      <td>110335.3</td>\n",
+       "      <td>6428.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mini</th>\n",
+       "      <td>88679.0</td>\n",
+       "      <td>10715.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hyundai</th>\n",
+       "      <td>101862.5</td>\n",
+       "      <td>6181.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonstige_autos</th>\n",
+       "      <td>89730.1</td>\n",
+       "      <td>14454.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>volvo</th>\n",
+       "      <td>137230.5</td>\n",
+       "      <td>6151.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kia</th>\n",
+       "      <td>107954.5</td>\n",
+       "      <td>6810.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>porsche</th>\n",
+       "      <td>98812.9</td>\n",
+       "      <td>46955.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>honda</th>\n",
+       "      <td>115989.0</td>\n",
+       "      <td>5297.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mitsubishi</th>\n",
+       "      <td>119687.5</td>\n",
+       "      <td>4812.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chevrolet</th>\n",
+       "      <td>98577.2</td>\n",
+       "      <td>7177.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alfa_romeo</th>\n",
+       "      <td>129461.2</td>\n",
+       "      <td>5255.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>suzuki</th>\n",
+       "      <td>103755.9</td>\n",
+       "      <td>5149.88</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                mean_mileage  mean_price\n",
+       "volkswagen          125765.7     6645.13\n",
+       "bmw                 132001.5     9119.20\n",
+       "mercedes_benz       130062.6     9302.61\n",
+       "audi                127491.0    10322.27\n",
+       "opel                123952.9     4219.95\n",
+       "ford                119620.0     5331.48\n",
+       "renault             121423.9     3590.94\n",
+       "peugeot             122341.0     3955.17\n",
+       "fiat                107901.8     4008.17\n",
+       "skoda               110063.5     6836.70\n",
+       "seat                116104.2     5638.64\n",
+       "smart                97775.1     3780.47\n",
+       "toyota              113740.8     5573.57\n",
+       "mazda               119981.1     5309.53\n",
+       "citroen             114245.6     4614.97\n",
+       "nissan              110335.3     6428.43\n",
+       "mini                 88679.0    10715.24\n",
+       "hyundai             101862.5     6181.87\n",
+       "sonstige_autos       89730.1    14454.55\n",
+       "volvo               137230.5     6151.58\n",
+       "kia                 107954.5     6810.16\n",
+       "porsche              98812.9    46955.15\n",
+       "honda               115989.0     5297.28\n",
+       "mitsubishi          119687.5     4812.51\n",
+       "chevrolet            98577.2     7177.41\n",
+       "alfa_romeo          129461.2     5255.38\n",
+       "suzuki              103755.9     5149.88"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_mileage</th>\n",
+       "      <th>mean_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean_mileage</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.303941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean_price</th>\n",
+       "      <td>-0.303941</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              mean_mileage  mean_price\n",
+       "mean_mileage      1.000000   -0.303941\n",
+       "mean_price       -0.303941    1.000000"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brands.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking through the brands DataFrame and the correlation between mean_mileage and mean_price, it doesn't appear that there is much relation between mileage and price."
    ]
   },
   {
