--- a/world-happiness-report/Cleaning_Happiness.ipynb
+++ b/world-happiness-report/Cleaning_Happiness.ipynb
@@ -1084,7 +1084,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x209af803f60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2317e7b6860>"
       ]
      },
      "execution_count": 17,
@@ -1636,7 +1636,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x209af8da278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2317e822ac8>"
       ]
      },
      "execution_count": 25,
@@ -2278,17 +2278,17 @@
       "2011    22\n",
       "2013    12\n",
       "2009     8\n",
-      "2008     6\n",
       "2005     6\n",
+      "2008     6\n",
       "2007     4\n",
       "2004     3\n",
-      "1998     1\n",
-      "1992     1\n",
-      "2006     1\n",
-      "2000     1\n",
-      "1999     1\n",
-      "1995     1\n",
       "2002     1\n",
+      "1999     1\n",
+      "1998     1\n",
+      "1995     1\n",
+      "2006     1\n",
+      "1992     1\n",
+      "2000     1\n",
       "2003     1\n",
       "Name: Years, dtype: int64\n"
      ]
@@ -2444,7 +2444,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x209b0f61ac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2317f8c8240>"
       ]
      },
      "execution_count": 36,
@@ -2473,6 +2473,107 @@
     "pv_incomes.plot(kind='bar',\n",
     "                rot = 30,\n",
     "                ylim = (0,10)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Missing and Duplicate Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape_2015 = happiness_2015.shape\n",
+    "shape_2016 = happiness_2016.shape\n",
+    "shape_2017 = happiness_2017.shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(158, 13)\n",
+      "(157, 14)\n",
+      "(155, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shape_2015)\n",
+    "print(shape_2016)\n",
+    "print(shape_2017)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Happiness Rank</th>\n",
+       "      <th>Happiness Score</th>\n",
+       "      <th>Standard Error</th>\n",
+       "      <th>Economy</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Trust</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Dystopia Residual</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Country, Region, Happiness Rank, Happiness Score, Standard Error, Economy, Family, Health, Freedom, Trust, Generosity, Dystopia Residual, Year]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing = happiness_2015['Happiness Score'].isnull()\n",
+    "happiness_2015[missing]"
    ]
   },
   {
